test/error/ast/ArrayIndexNegative.mod
MODULE ArrayIndexNegative;
VAR a: ARRAY 10 OF INTEGER;
BEGIN
  a[-1];
END ArrayIndexNegative.
